--- a/src/main/resources/public/app.html
+++ b/src/main/resources/public/app.html
@@ -2,9 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cliente de Logs</title>
 </head>
 <body>
-    <h1>HOLAAAAA</h1>
+<h1>Cliente de Logs</h1>
+<label for="logInput">Ingrese un log:</label>
+<input type="text" id="logInput" placeholder="Escriba su log aquí">
+<button id="fetchButton">Enviar</button>
+<h2>Lista de Logs:</h2>
+<ul id="logList"></ul>
+
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const logInput = document.getElementById("logInput");
+        const fetchButton = document.getElementById("fetchButton");
+        const logList = document.getElementById("logList");
+
+        fetchButton.addEventListener("click", () => {
+            const logValue = logInput.value;
+
+            if (logValue !== "") {
+                const url = `/roundrobin?log=${encodeURIComponent(logValue)}`;
+
+                fetch(url)
+                    .then(response => response.text())
+                    .then(data => {
+                        logList.innerHTML = "";
+                        const logEntries = data.split(", ");
+                        logEntries.forEach(logEntry => {
+                            const cleanLogEntry = logEntry.replace(/\[|\]/g, "");
+                            const listItem = document.createElement("li");
+                            listItem.textContent = cleanLogEntry;
+                            logList.appendChild(listItem);
+                        });
+                    })
+                    .catch(error => {
+                        console.error("Error al realizar la solicitud Fetch:", error);
+                    });
+            } else {
+                alert("Por favor, ingrese un log válido.");
+            }
+        });
+    });
+</script>
 </body>
 </html>
